--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 					<div class="resume-header px-4 px-lg-5">
 						<div class="resume-profile-holder text-center">
 							<img class="resume-profile-pic rounded-circle" src="assets/images/profile.png" alt="image">
-							<h2 class="resume-name text-uppercase">Gunti Sai Pranitha</h2>
+							<h2 class="resume-name text-uppercase">Sai Pranitha Gunti </h2>
 							<div class="resume-role-title text-uppercase">Intern</div>
 							<div class="resume-contact mt-4">
-								<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
-									<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-globe me-2"></i> www.example.com</li>
-								</ul>
+								<div class="text-center">
+									<p>Phone: +91 9010812611 | Email: pranitha.gunti1609@example.com | <a href="https://pranithagunti/portfolio" target="_blank">Website</a></p>
+								</div>
 							</div>
 						</div>
 					</div>
