--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<ul class="social-list list-inline mx-auto">
 							
 							<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="https://github.com/pranithagunti"><i class="fa-brands fa-github fa-fw"></i></a></li>
-							<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="www.linkedin.com/in/sai-pranitha-gunti-4486772b3"><i class="fa-brands fa-linkedin-in fa-fw"></i></a></li>
+							<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="https://www.linkedin.com/in/sai-pranitha-gunti-4486772b3/"><i class="fa-brands fa-linkedin-in fa-fw"></i></a></li>
 							
 						</ul>
 					</div>
